--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 h1 {
     margin-top: 250px;
-    margin-left: 250px;
-    color: coral;
+    padding: 15px;
+    padding-left: 250px;
+    color: #597a95;
     font-weight: 900;
     font-size: 50px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #f3b39a;
 }
 
 .swimmier {
@@ -20,6 +22,8 @@ h1 {
     z-index: 3;
 
 }
+
+
 
 .ring {
     position: absolute;
